--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,8 @@
 
 .body {
   font-family: var(--text-font-family);
-}
-a {
-  text-decoration: none;
-}
-
-ul {
-  list-style-type: none;
+  color: var(--slate-color);
+  background-color: var(--white-color);
 }
 
 /* Classes */
@@ -32,9 +27,11 @@ ul {
   font-size: 18px;
   font-style: normal;
   font-weight: 800;
-  line-height: 116.667%;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
+  text-decoration: none;
+  list-style-type: none;
 }
 
 .logo-second-link {
@@ -43,42 +40,52 @@ ul {
   font-size: 18px;
   font-style: normal;
   font-weight: 800;
-  line-height: 116.667%;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
   text-decoration: none;
   list-style-type: none;
 }
 
-.topline-words {
+.logo-second-link-light {
+  color: var(--cloud-color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 116.667%;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+}
+
+.topline-words-header {
   color: var(--navy-blue-color);
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 150%;
-  letter-spacing: 0.32px;
+  line-height: 1.5;
+  letter-spacing: 0, 02em;
   text-decoration: none;
   list-style-type: none;
 }
 
-.topline-words:hover,
-.topline-words:focus {
+.topline-words-header:hover,
+.topline-words-header:focus {
   color: var(--iris-color);
 }
 
-.address-mail {
+.address-mail-header {
   color: var(--slate-color);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0.32px;
   text-decoration: none;
   list-style-type: none;
 }
 
-.address-mail:hover,
-.address-pmail:focus {
+.address-mail-header:hover,
+.address-mail-header:focus {
   color: var(--iris-color);
 }
 
@@ -87,7 +94,7 @@ ul {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0.32px;
   text-decoration: none;
   list-style-type: none;
@@ -98,16 +105,18 @@ ul {
   color: var(--iris-color);
 }
 
-.hero-header {
+.hero-section-header {
   color: var(--white-color);
   font-size: 56px;
   font-style: normal;
   font-weight: 700;
   line-height: 107.143%;
   letter-spacing: 1.12px;
+  text-align: center;
 }
 
-.hero-button {
+.hero-section-button {
+  font-family: var(--text-font-family);
   color: var(--white-color);
   background: var(--iris-color);
   box-shadow: var(--shadow-color);
@@ -117,6 +126,11 @@ ul {
   line-height: 150%;
   letter-spacing: 0.64px;
   cursor: pointer;
+}
+
+.hero-section-button:hover,
+.hero-section-button:focus {
+  color: var(--ocean-color);
 }
 
 .section-two-header {
@@ -147,6 +161,10 @@ ul {
   text-transform: capitalize;
 }
 
+.section-four-page {
+  background-color: #f4f4fd;
+}
+
 .section-four-header {
   color: var(--navy-blue-color);
   font-size: 36px;
@@ -164,6 +182,7 @@ ul {
   font-weight: 500;
   line-height: 120%;
   letter-spacing: 0.4px;
+  text-align: center;
 }
 
 .section-four-jobs {
@@ -175,7 +194,7 @@ ul {
   letter-spacing: 0.32px;
 }
 
-.fotter-paragraf {
+.fotter-paragraf-section {
   color: var(--cloud-color);
   font-size: 16px;
   font-style: normal;
@@ -184,7 +203,11 @@ ul {
   letter-spacing: 0.32px;
 }
 
-.filter-buttons {
+.footer-section-down {
+  background-color: #2e2f42;
+}
+
+.filter-buttons-section {
   border-color: var(--cornflower-color);
   color: var(--iris-color);
   background-color: var(--cloud-color);
@@ -196,8 +219,8 @@ ul {
   cursor: pointer;
 }
 
-.filter-buttons:hover,
-.filter-buttons:focus {
+.filter-buttons-section:hover,
+.filter-buttons-section:focus {
   background-color: var(--ocean-color);
   color: var(--white-color);
 }
